<resources>

    <string name="app_name">Expense Manager</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="amount">Amount</string>
    <string name="income_date">Income Date</string>
    <string name="income_time">Income Time</string>
    <string name="income_description">Income Description</string>
    <string name="income_type">Income Type</string>
    <string name="income_paymentmode">Income Payment Mode</string>
    <string name="spin">Spinner1</string>
    <string name="add_expense">Add Expense</string>


    <string name="expense_date">Expense Date</string>
    <string name="expense_time">Expense Time</string>
    <string name="expense_description">Expense Description</string>
    <string name="expense_type">Expense Type</string>
    <string name="expense_paymentmode">Expense Payment Mode</string>

    <string name="todays_expenses">Today\'s Expenses</string>
    <string name="current_week_expenses">Current Week\'s Expenses</string>
    <string name="total_expense">Total Expense - </string>
    <string name="rupee_sym">₹</string>
    <string name="expense_add_successfully">Expense Added Successfully..</string>
    <string name="amount_empty_error">Amount can not be empty!!</string>
    <string name="current_months_expenses">Current Month\'s Expenses</string>
    <string name="add_new_category">Add New Category</string>
    <string name="category">Category</string>
    <string name="add_category">Add Category</string>
    <string name="action_add_category">Add Category</string>
    <string name="category_empty_error">Category can not be empty!!</string>
    <string name="add_category_success">Category added successfully..</string>

    <array name="drawer_items">
        <item>Home</item>
        <item>This Week</item>
        <item>This Month</item>
    </array>


</resources>
